fixed faulty hamburger menu on mobile

--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -1,51 +1,72 @@
-// navigation
-.primary-header {
-  margin-top: 10px;
-}
+@media (max-width: 50em) {
+  section {
+    button {
+      width: 60%;
+    }
+  }
 
-.nav-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-h1 {
-  font-size: 2.375rem;
-  font-family: inherit;
-  font-weight: 700;
-  color: $blue;
-  margin-left: 20px;
-}
-
-.mobile-nav-toggle {
-  display: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  padding: 0 !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  clip: rect(0, 0, 0, 0) !important;
-  white-space: nowrap !important;
-  border: 0 !important;
-}
-
-.nav-links {
-  list-style: none;
-  padding: 0;
-  li {
-    display: inline-block;
-    padding: 0px 10px;
-
+  // hamburger menu
+  .primary-navigation {
+    // transition: ease-out 0.3s;
+    display: none;
+    position: fixed;
+    padding: 3rem;
+    position: fixed;
+    max-width: 25rem;
+    margin-left: auto;
+    inset: 7rem 1rem auto;
+    background-color: $white;
+    box-shadow: 0 0 0.75em rgb(0, 0, 0, 0.05), 0 0 0 10000vmax rgb(0 0 0 / 0.75);
+    border-radius: 0.25rem;
+    z-index: 3;
     a {
-      color: $black;
       &:hover {
         color: $blue;
-        transition: 0.1s;
+      }
+    }
+  }
+
+  .nav-links {
+    display: grid;
+    gap: 2rem;
+    text-align: center;
+    font-weight: 700;
+  }
+
+  .nav-links a {
+    text-decoration: none;
+    color: $black;
+  }
+
+  .nav-links a {
+    &:hover,
+    &:focus {
+      color: $blue;
+    }
+  }
+
+  .primary-navigation[data-visible] {
+    display: block;
+  }
+  .mobile-nav-toggle {
+    display: block;
+    margin-top: 10px;
+    z-index: 100;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    padding: 0.5em;
+  }
+
+  .mobile-nav-toggle .icon-close {
+    display: none;
+  }
+
+  .projects {
+    .imageContainer {
+      .fa-brands {
+        // border: 2px solid red;
+        font-size: 50px;
       }
     }
   }
