--- a/styles/partials/_sections.scss
+++ b/styles/partials/_sections.scss
@@ -3,7 +3,7 @@
 }
 
 .home {
-  background-image: url("../../../assets/bg-image.jpg");
+  background-image: url("../../assets/bg-image.jpg");
   background-position: center;
   filter: blur(4px);
   background-repeat: no-repeat;
