--- a/styles/styles.css
+++ b/styles/styles.css
@@ -376,59 +376,6 @@ section button:hover {
   color: #fff;
 }
 
-@media (max-width: 50em) {
-  section button {
-    width: 60%;
-  }
-  .primary-navigation {
-    display: none;
-    position: fixed;
-    padding: 3rem;
-    position: fixed;
-    max-width: 25rem;
-    margin-left: auto;
-    inset: 7rem 1rem auto;
-    background-color: white;
-    -webkit-box-shadow: 0 0 0.75em rgba(0, 0, 0, 0.05), 0 0 0 10000vmax rgba(0, 0, 0, 0.75);
-            box-shadow: 0 0 0.75em rgba(0, 0, 0, 0.05), 0 0 0 10000vmax rgba(0, 0, 0, 0.75);
-    border-radius: 0.25rem;
-    z-index: 3;
-  }
-  .primary-navigation a:hover {
-    color: #00a7e6;
-  }
-  .nav-links {
-    display: grid;
-    gap: 2rem;
-    text-align: center;
-    font-weight: 700;
-  }
-  .nav-links a {
-    text-decoration: none;
-    color: #2d2d2d;
-  }
-  .nav-links a:hover, .nav-links a:focus {
-    color: #00a7e6;
-  }
-  .primary-navigation[data-visible] {
-    display: block;
-  }
-  .mobile-nav-toggle {
-    display: block;
-    margin-top: 10px;
-    z-index: 100;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    padding: 0.5em;
-  }
-  .mobile-nav-toggle .icon-close {
-    display: none;
-  }
-  .projects .imageContainer .fa-brands {
-    font-size: 50px;
-  }
-}
 .primary-header {
   margin-top: 10px;
 }
@@ -492,7 +439,7 @@ h1 {
 }
 
 .home {
-  background-image: url("../../../assets/bg-image.jpg");
+  background-image: url("../../assets/bg-image.jpg");
   background-position: center;
   -webkit-filter: blur(4px);
           filter: blur(4px);
@@ -659,64 +606,59 @@ footer {
   text-align: center;
 }
 
-.primary-header {
-  margin-top: 10px;
+@media (max-width: 50em) {
+  section button {
+    width: 60%;
+  }
+  .primary-navigation {
+    display: none;
+    position: fixed;
+    padding: 3rem;
+    position: fixed;
+    max-width: 25rem;
+    margin-left: auto;
+    inset: 7rem 1rem auto;
+    background-color: white;
+    -webkit-box-shadow: 0 0 0.75em rgba(0, 0, 0, 0.05), 0 0 0 10000vmax rgba(0, 0, 0, 0.75);
+            box-shadow: 0 0 0.75em rgba(0, 0, 0, 0.05), 0 0 0 10000vmax rgba(0, 0, 0, 0.75);
+    border-radius: 0.25rem;
+    z-index: 3;
+  }
+  .primary-navigation a:hover {
+    color: #00a7e6;
+  }
+  .nav-links {
+    display: grid;
+    gap: 2rem;
+    text-align: center;
+    font-weight: 700;
+  }
+  .nav-links a {
+    text-decoration: none;
+    color: #2d2d2d;
+  }
+  .nav-links a:hover, .nav-links a:focus {
+    color: #00a7e6;
+  }
+  .primary-navigation[data-visible] {
+    display: block;
+  }
+  .mobile-nav-toggle {
+    display: block;
+    margin-top: 10px;
+    z-index: 100;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    padding: 0.5em;
+  }
+  .mobile-nav-toggle .icon-close {
+    display: none;
+  }
+  .projects .imageContainer .fa-brands {
+    font-size: 50px;
+  }
 }
-
-.nav-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-h1 {
-  font-size: 2.375rem;
-  font-family: inherit;
-  font-weight: 700;
-  color: #00a7e6;
-  margin-left: 20px;
-}
-
-.mobile-nav-toggle {
-  display: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  padding: 0 !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  clip: rect(0, 0, 0, 0) !important;
-  white-space: nowrap !important;
-  border: 0 !important;
-}
-
-.nav-links {
-  list-style: none;
-  padding: 0;
-}
-.nav-links li {
-  display: inline-block;
-  padding: 0px 10px;
-}
-.nav-links li a {
-  color: #2d2d2d;
-}
-.nav-links li a:hover {
-  color: #00a7e6;
-  -webkit-transition: 0.1s;
-  transition: 0.1s;
-}
-
 .contact form {
   display: -webkit-box;
   display: -ms-flexbox;
